[gd_scene load_steps=5 format=2]

[ext_resource path="res://game_objects/enimies/fly_enemy/scripts/fly_enmey.gd" type="Script" id=1]
[ext_resource path="res://components/hurt_hit_box/hit_box/objs/hit_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/hurt_hit_box/hurt_box/objs/hurt_box.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="fly_enmey" type="Node2D"]
script = ExtResource( 1 )

[node name="pivot" type="Node2D" parent="."]

[node name="sprite" type="AnimatedSprite" parent="pivot"]
frames = SubResource( 1 )
playing = true
flip_h = true

[node name="hit_box" parent="pivot" instance=ExtResource( 2 )]
_name = "flyenemy"
_filter = [ "bug", "flyenemy" ]

[node name="hurt_box" parent="pivot" instance=ExtResource( 3 )]
_name = "flyenemy"
_filter = [ "flyenemy", "bug" ]

[connection signal="at_hurt_factor" from="pivot/hurt_box" to="." method="_on_hurt_box_at_hurt_factor"]
